--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,36 @@
 *.exe
 *.out
 *.app
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+.mtc
+*.out
+*.bak
+*.run.xml
+*blx.bib
+*.synctex.gz
+*.aux
+*.fls
+*.log
+/build/
+.deps
+*.nlo
+*.clo
+*.fdb*
